1. 增加Kotlin支持 2. 增加基于Okio的Socket类库

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,15 @@
         app:layout_constraintTop_toBottomOf="@id/tv_hello"
         />
 
+
+    <com.bin.david.form.core.SmartTable
+        android:id="@+id/st_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/bn_playlist"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="20dp"
+        />
+
 </android.support.constraint.ConstraintLayout>
