--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
         app:layout_constraintHorizontal_bias="0.25"
         >
         <Button
@@ -21,6 +23,8 @@
             android:text="start"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
             />
 
 
@@ -33,6 +37,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.75">
         <Button
             android:id="@+id/bn_stop"
@@ -41,6 +46,8 @@
             android:text="stop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
             />
 
 
@@ -77,7 +84,21 @@
         android:paddingVertical="5dp"
         android:text="playlist"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="30dp"
         app:layout_constraintTop_toBottomOf="@id/tv_hello"
+        />
+
+    <Button
+        android:id="@+id/bn_save"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingVertical="5dp"
+        app:layout_constrainedWidth="true"
+        android:text="saveData"
+        app:layout_constraintLeft_toRightOf="@id/bn_playlist"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toTopOf="@id/bn_playlist"
         />
 
 
