--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black">#000000</color>
     <color name="light_gray">#AAAAAA</color>
     <color name="dark_gray">#666666</color>
+    <color name="white">#ffffff</color>
 </resources>
