--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -15,7 +15,17 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@mipmap/back"
-            android:padding="10dp"/>
+            android:padding="12dp"/>
+
+        <TextView
+            android:id="@+id/tv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="返回"
+            android:layout_toRightOf="@id/iv_left"
+            android:textColor="@color/white"
+            android:layout_centerVertical="true"
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/tv_title"
@@ -24,6 +34,17 @@
             android:layout_centerInParent="true"
             android:textSize="20sp"
             android:textColor="@color/white"
+            android:text="在线"/>
+
+        <TextView
+            android:id="@+id/tv_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="12dp"
             android:text="标题"/>
     </RelativeLayout>
     <FrameLayout
