--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -15,7 +15,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@mipmap/back"
-            android:padding="12dp"/>
+            android:padding="15dp"/>
 
         <TextView
             android:id="@+id/tv_back"
@@ -24,28 +24,29 @@
             android:text="返回"
             android:layout_toRightOf="@id/iv_left"
             android:textColor="@color/white"
+            android:layout_marginLeft="-8dp"
             android:layout_centerVertical="true"
-            android:textSize="18sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="@color/white"
-            android:text="在线"/>
+            android:text="标题"/>
 
         <TextView
             android:id="@+id/tv_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@color/white"
             android:layout_alignParentRight="true"
             android:layout_marginRight="12dp"
-            android:text="标题"/>
+            android:text="在线"/>
     </RelativeLayout>
     <FrameLayout
         android:id="@+id/content"
