--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -16,32 +16,55 @@
                 android:id="@+id/texture_view"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="20dp"/>
-
-            <Button
-                android:id="@+id/btn_capture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/texture_view"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="10dp"
-                android:text="taken"
+                android:layout_marginTop="20dp"
                 />
 
-            <ImageView
-                android:id="@+id/iv"
-                android:layout_width="300dp"
+
+
+
+            <com.lihang.ShadowLayout
+                android:id="@+id/shadow"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/btn_capture"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/texture_view"
+                android:layout_marginTop="20dp"
+
                 app:layout_constraintRight_toRightOf="parent"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:layout_marginTop="20dp"/>
+                app:hl_shadowColor="#333333"
+                app:hl_cornerRadius="10dp"
+                app:hl_shadowLimit="17dp"
+                >
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+
+                    <Button
+                        android:id="@+id/btn_capture"
+                        android:layout_width="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content"
+                        android:text="taken"
+                        />
+
+                    <ImageView
+                        android:id="@+id/iv"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:scaleType="centerCrop"
+                        android:adjustViewBounds="true"
+                        />
+                </LinearLayout>
+
+            </com.lihang.ShadowLayout>
+
 
 
         </android.support.constraint.ConstraintLayout>
